# Human_Obstacle_Detector

./: .gitattributes  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  readme.md
app/: CMakeLists.txt  Camera.cpp  DetectionModule.cpp  IOHandler.cpp  Network.cpp  Transformation.cpp  VisionModule.cpp  main.cpp
docs/html/: CameraTest_8cpp.html  CameraTest_8cpp__incl.map  CameraTest_8cpp__incl.md5  Camera_8cpp.html  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8hpp.html  Camera_8hpp__dep__incl.map  Camera_8hpp__dep__incl.md5  Camera_8hpp__incl.map  Camera_8hpp__incl.md5  Camera_8hpp_source.html  DetectionModuleTest_8cpp.html  DetectionModuleTest_8cpp__incl.map  DetectionModuleTest_8cpp__incl.md5  DetectionModule_8cpp.html  DetectionModule_8cpp__incl.map  DetectionModule_8cpp__incl.md5  DetectionModule_8hpp.html  DetectionModule_8hpp__dep__incl.map  DetectionModule_8hpp__dep__incl.md5  DetectionModule_8hpp__incl.map  DetectionModule_8hpp__incl.md5  DetectionModule_8hpp_source.html  IOHandlerTest_8cpp.html  IOHandlerTest_8cpp__incl.map  IOHandlerTest_8cpp__incl.md5  IOHandler_8cpp.html  (+88 more)
include/: Camera.hpp  DetectionModule.hpp  IOHandler.hpp  Network.hpp  Transformation.hpp  VisionModule.hpp
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  CameraTest.hpp  DetectionModuleTest.cpp  DetectionModuleTest.hpp  IOHandlerTest.cpp  IOHandlerTest.hpp  NetworkTest.cpp  NetworkTest.hpp  TransformationTest.cpp  VisionModuleTest.cpp  VisionModuleTest.hpp  main.cpp
test/testData/: testVideo.avi
test/testResults/: DetectionsFile.txt  testVideoDetection.avi
(+87 files in other folders)
